--- a/NewsApp/View/FavoritesCollectionViewCell.xib
+++ b/NewsApp/View/FavoritesCollectionViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,11 +17,18 @@
                 <rect key="frame" x="0.0" y="0.0" width="651" height="1034"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dlr-hi-iYD">
-                        <rect key="frame" x="0.0" y="0.0" width="651" height="847"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dlr-hi-iYD">
+                        <rect key="frame" x="0.0" y="0.0" width="651" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="150" id="fT3-5T-Enk"/>
+                        </constraints>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mqp-fh-ymh" customClass="GradientView" customModule="NewsApp" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="651" height="1034"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="5VX-h8-aDc">
-                        <rect key="frame" x="20" y="817" width="611" height="42.666666666666629"/>
+                        <rect key="frame" x="20" y="130" width="611" height="42.666666666666657"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="roF-2k-V51">
                                 <rect key="frame" x="0.0" y="0.0" width="611" height="20.333333333333332"/>
@@ -29,7 +37,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85l-6a-xAa">
-                                <rect key="frame" x="0.0" y="22.333333333333371" width="611" height="20.333333333333329"/>
+                                <rect key="frame" x="0.0" y="22.333333333333343" width="611" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -37,35 +45,34 @@
                         </subviews>
                     </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z7r-9S-B87">
-                        <rect key="frame" x="20" y="869.66666666666663" width="200" height="100"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="100" id="0CO-SV-Td6"/>
-                            <constraint firstAttribute="width" constant="200" id="Tub-8P-e1h"/>
-                        </constraints>
+                        <rect key="frame" x="20" y="192.66666666666666" width="611" height="20.333333333333343"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G82-ql-tJL">
-                        <rect key="frame" x="130" y="989.66666666666663" width="511" height="34.333333333333371"/>
-                        <buttonConfiguration key="configuration" style="gray" title="Flip to read"/>
+                        <rect key="frame" x="539.33333333333337" y="991" width="96.666666666666629" height="28"/>
+                        <buttonConfiguration key="configuration" style="gray" title="Flip to read" buttonSize="small"/>
                     </button>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="z7r-9S-B87" firstAttribute="top" secondItem="5VX-h8-aDc" secondAttribute="bottom" constant="10" id="ASr-nd-3Qp"/>
-                <constraint firstAttribute="bottom" secondItem="G82-ql-tJL" secondAttribute="bottom" constant="10" id="HFw-zD-470"/>
+                <constraint firstAttribute="trailing" secondItem="z7r-9S-B87" secondAttribute="trailing" constant="20" id="1i7-g4-dvf"/>
+                <constraint firstAttribute="bottom" secondItem="mqp-fh-ymh" secondAttribute="bottom" id="4yo-wc-M7s"/>
+                <constraint firstItem="mqp-fh-ymh" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="AII-yO-l1U"/>
+                <constraint firstItem="z7r-9S-B87" firstAttribute="top" secondItem="5VX-h8-aDc" secondAttribute="bottom" constant="20" id="ASr-nd-3Qp"/>
+                <constraint firstAttribute="trailing" secondItem="mqp-fh-ymh" secondAttribute="trailing" id="Emr-oo-f9m"/>
+                <constraint firstAttribute="bottom" secondItem="G82-ql-tJL" secondAttribute="bottom" constant="15" id="HFw-zD-470"/>
                 <constraint firstItem="z7r-9S-B87" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="Jmz-bU-G5b"/>
                 <constraint firstAttribute="trailing" secondItem="dlr-hi-iYD" secondAttribute="trailing" id="PbP-tT-Dtv"/>
-                <constraint firstItem="5VX-h8-aDc" firstAttribute="top" secondItem="dlr-hi-iYD" secondAttribute="bottom" constant="-30" id="RA0-xd-psV"/>
+                <constraint firstItem="5VX-h8-aDc" firstAttribute="top" secondItem="dlr-hi-iYD" secondAttribute="bottom" constant="-20" id="RA0-xd-psV"/>
                 <constraint firstItem="dlr-hi-iYD" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="XGt-hu-GfZ"/>
-                <constraint firstItem="G82-ql-tJL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="130" id="gWY-d1-5QO"/>
                 <constraint firstItem="5VX-h8-aDc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="k8P-zo-u0e"/>
-                <constraint firstItem="G82-ql-tJL" firstAttribute="top" secondItem="z7r-9S-B87" secondAttribute="bottom" constant="20" id="lf0-d5-p4Z"/>
-                <constraint firstAttribute="trailing" secondItem="G82-ql-tJL" secondAttribute="trailing" constant="10" id="mvu-Lx-5q7"/>
+                <constraint firstAttribute="trailing" secondItem="G82-ql-tJL" secondAttribute="trailing" constant="15" id="mvu-Lx-5q7"/>
                 <constraint firstItem="dlr-hi-iYD" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="nC7-Xc-v6Y"/>
                 <constraint firstAttribute="trailing" secondItem="5VX-h8-aDc" secondAttribute="trailing" constant="20" id="pcz-zi-aXR"/>
+                <constraint firstItem="mqp-fh-ymh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="v6y-vT-E6w"/>
             </constraints>
             <size key="customSize" width="651" height="1034"/>
             <connections>
@@ -73,9 +80,15 @@
                 <outlet property="contentLabel" destination="z7r-9S-B87" id="syb-qu-6Hr"/>
                 <outlet property="favoriteArticleImageView" destination="dlr-hi-iYD" id="Mfc-o5-jYk"/>
                 <outlet property="flipButton" destination="G82-ql-tJL" id="ag9-Ty-Fah"/>
+                <outlet property="gradientView" destination="mqp-fh-ymh" id="Hoe-Gm-P9S"/>
                 <outlet property="titleLabel" destination="roF-2k-V51" id="c7Q-tx-C0F"/>
             </connections>
             <point key="canvasLocation" x="503.05343511450377" y="297.18309859154931"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
