--- a/NewsApp/View/CustomTableViewCell.xib
+++ b/NewsApp/View/CustomTableViewCell.xib
@@ -17,56 +17,52 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qwe-ll-mib" userLabel="Label Stack View">
-                        <rect key="frame" x="10" y="34.666666666666671" width="343" height="50.666666666666671"/>
+                        <rect key="frame" x="10" y="32.666666666666671" width="300" height="50.666666666666671"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VpJ-xC-dCg">
-                                <rect key="frame" x="0.0" y="0.0" width="343" height="20.333333333333332"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="20.333333333333332"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b36-CF-l4b">
-                                <rect key="frame" x="0.0" y="30.333333333333336" width="343" height="20.333333333333336"/>
+                                <rect key="frame" x="0.0" y="30.333333333333336" width="300" height="20.333333333333336"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="300" id="Gvg-pk-CX6"/>
+                        </constraints>
                     </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="8Tb-0j-y9t" userLabel="Image Stack View">
-                        <rect key="frame" x="373" y="20" width="30" height="80"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="8Tb-0j-y9t" userLabel="Image Stack View">
+                        <rect key="frame" x="330" y="10" width="83" height="96"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W2h-Ji-uqx">
-                                <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Ahd-vR-gHQ"/>
-                                    <constraint firstAttribute="width" constant="30" id="Z6y-dW-PYq"/>
-                                </constraints>
-                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XtY-oD-04u">
+                                <rect key="frame" x="15.666666666666686" y="0.0" width="52" height="38"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="star" catalog="system"/>
+                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ios-checkmark-circle-11" translatesAutoresizingMaskIntoConstraints="NO" id="fBS-29-Mxc">
-                                <rect key="frame" x="0.0" y="50" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="6Ww-Me-y9C"/>
-                                    <constraint firstAttribute="height" constant="30" id="jc3-x7-NOI"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="58" width="83" height="38"/>
                             </imageView>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="qwe-ll-mib" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="8ek-i2-aBd"/>
-                    <constraint firstItem="8Tb-0j-y9t" firstAttribute="leading" secondItem="qwe-ll-mib" secondAttribute="trailing" constant="20" id="Gtg-EV-nIC"/>
-                    <constraint firstAttribute="bottom" secondItem="8Tb-0j-y9t" secondAttribute="bottom" constant="20" id="Pec-hW-mLx"/>
-                    <constraint firstAttribute="trailing" secondItem="8Tb-0j-y9t" secondAttribute="trailing" constant="20" id="SZK-YV-v4q"/>
+                    <constraint firstAttribute="bottom" secondItem="8Tb-0j-y9t" secondAttribute="bottom" constant="10" id="Pec-hW-mLx"/>
+                    <constraint firstAttribute="trailing" secondItem="8Tb-0j-y9t" secondAttribute="trailing" constant="10" id="SZK-YV-v4q"/>
                     <constraint firstItem="qwe-ll-mib" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cGQ-BM-y4G"/>
-                    <constraint firstItem="8Tb-0j-y9t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="tUv-17-pQe"/>
+                    <constraint firstItem="8Tb-0j-y9t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="tUv-17-pQe"/>
+                    <constraint firstItem="8Tb-0j-y9t" firstAttribute="leading" secondItem="qwe-ll-mib" secondAttribute="trailing" constant="20" id="vuk-cK-1V7"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="authorLabel" destination="b36-CF-l4b" id="jYW-tP-m5b"/>
                 <outlet property="checkmarkImage" destination="fBS-29-Mxc" id="O9l-fL-Wy3"/>
-                <outlet property="favoritesImage" destination="W2h-Ji-uqx" id="J6N-Y6-sIh"/>
                 <outlet property="titleLabel" destination="VpJ-xC-dCg" id="O8e-ph-3kw"/>
             </connections>
             <point key="canvasLocation" x="208.3969465648855" y="12.67605633802817"/>
@@ -74,5 +70,6 @@
     </objects>
     <resources>
         <image name="ios-checkmark-circle-11" width="170.66667175292969" height="170.66667175292969"/>
+        <image name="star" catalog="system" width="128" height="116"/>
     </resources>
 </document>
