--- a/NewsApp/View/FavoritesCollectionViewCell.xib
+++ b/NewsApp/View/FavoritesCollectionViewCell.xib
@@ -77,7 +77,7 @@
             <size key="customSize" width="651" height="1034"/>
             <connections>
                 <outlet property="authorLabel" destination="85l-6a-xAa" id="4WP-a4-UOn"/>
-                <outlet property="contentLabel" destination="z7r-9S-B87" id="syb-qu-6Hr"/>
+                <outlet property="descriptionLabel" destination="z7r-9S-B87" id="syb-qu-6Hr"/>
                 <outlet property="favoriteArticleImageView" destination="dlr-hi-iYD" id="Mfc-o5-jYk"/>
                 <outlet property="flipButton" destination="G82-ql-tJL" id="ag9-Ty-Fah"/>
                 <outlet property="gradientView" destination="mqp-fh-ymh" id="Hoe-Gm-P9S"/>
